Added Source.cpp - Placeholder. Added Chpt1Q3_Quiz - .Cpp file with solution to Question 3 from LearnCpp.com Chapter 1 Review Quiz.

--- a/LearnCpp.vcxproj
+++ b/LearnCpp.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Chpt1Q3_Quiz.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
